# sdl2-cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
